force-app/main/default/objects/Site_Walk_Form__c/Site_Walk_Form__c.object-meta.xml
<CustomObject>
    <label>Site Walk Form</label>
    <nameField>
        <label>Site Walk Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Walk Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>