force-app/main/default/objects/Site_Walk_Form__c/fields/Attendee_Name_and_Signature2__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name_and_Signature2__c</fullName>
    <label>Attendee Name and Signature2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>