force-app/main/default/objects/Site_Walk_Form__c/fields/ByPassvalidation__c.field-meta.xml
<CustomField>
    <fullName>ByPassvalidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassvalidation</label>
    <type>Checkbox</type>
</CustomField>