force-app/main/default/objects/Site_Walk_Form__c/fields/Date1__c.field-meta.xml
<CustomField>
    <fullName>Date1__c</fullName>
    <label>Date1</label>
    <type>Date</type>
</CustomField>