force-app/main/default/objects/Site_Walk_Form__c/fields/Date_3__c.field-meta.xml
<CustomField>
    <fullName>Date_3__c</fullName>
    <label>Date 3</label>
    <type>Date</type>
</CustomField>