force-app/main/default/objects/Site_Walk_Form__c/fields/Date_sent_to_deconstruction_1__c.field-meta.xml
<CustomField>
    <fullName>Date_sent_to_deconstruction_1__c</fullName>
    <label>Date sent to deconstruction</label>
    <type>Date</type>
</CustomField>