force-app/main/default/objects/Site_Walk_Form__c/fields/Decon_Project_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Decon_Project_Manager_Email__c</fullName>
    <label>Decon Project Manager Email</label>
    <type>Email</type>
</CustomField>