force-app/main/default/objects/Site_Walk_Form__c/fields/Decon_Regional_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Decon_Regional_Manager_Email__c</fullName>
    <label>Decon Regional Manager Email</label>
    <type>Email</type>
</CustomField>