force-app/main/default/objects/Site_Walk_Form__c/fields/Dish__c.field-meta.xml
<CustomField>
    <fullName>Dish__c</fullName>
    <label>Dish Option</label>
    <referenceTo>Dish_Option__c</referenceTo>
    <relationshipLabel>Site Walk Forms</relationshipLabel>
    <relationshipName>Site_Walk_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>