force-app/main/default/objects/Site_Walk_Form__c/fields/EmailofLastModifiedby__c.field-meta.xml
<CustomField>
    <fullName>EmailofLastModifiedby__c</fullName>
    <label>EmailofLastModifiedby</label>
    <length>55</length>
    <type>Text</type>
</CustomField>