force-app/main/default/objects/Site_Walk_Form__c/fields/Enter_Long_Comment_here__c.field-meta.xml
<CustomField>
    <fullName>Enter_Long_Comment_here__c</fullName>
    <label>Enter Long Comment here</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>