force-app/main/default/objects/Site_Walk_Form__c/fields/First_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Attempt</label>
    <type>Checkbox</type>
</CustomField>