force-app/main/default/objects/Site_Walk_Form__c/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <label>Meeting Location</label>
    <length>55</length>
    <type>Text</type>
</CustomField>