force-app/main/default/objects/Site_Walk_Form__c/fields/Mobile2__c.field-meta.xml
<CustomField>
    <fullName>Mobile2__c</fullName>
    <label>T-Mobile Contact Mobile#</label>
    <type>Phone</type>
</CustomField>