force-app/main/default/objects/Site_Walk_Form__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>T_Mobile_Site_ID__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>T-Mobile Region</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>