force-app/main/default/objects/Site_Walk_Form__c/fields/Requested_timeframe_2__c.field-meta.xml
<CustomField>
    <fullName>Requested_timeframe_2__c</fullName>
    <inlineHelpText>Week of month, first Monday</inlineHelpText>
    <label>Requested timeframe #2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>