force-app/main/default/objects/Site_Walk_Form__c/fields/Second__c.field-meta.xml
<CustomField>
    <fullName>Second__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Attempt</label>
    <type>Checkbox</type>
</CustomField>