force-app/main/default/objects/Site_Walk_Form__c/fields/Send_to_Deconstruction_Team__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Deconstruction_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Deconstruction Team</label>
    <type>Checkbox</type>
</CustomField>