force-app/main/default/objects/Site_Walk_Form__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <formula>T_Mobile_Site_ID__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>