force-app/main/default/objects/Site_Walk_Form__c/fields/Site_Deconstruction__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Deconstruction</label>
    <referenceTo>Site_Decommission__c</referenceTo>
    <relationshipLabel>Site Walk Forms</relationshipLabel>
    <relationshipName>Site_Walk_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>