force-app/main/default/objects/Site_Walk_Form__c/fields/Site_Specific_Access_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Site_Specific_Access_Requirements__c</fullName>
    <label>Site Specific Access Requirements</label>
    <length>55</length>
    <type>Text</type>
</CustomField>