force-app/main/default/objects/Site_Walk_Form__c/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <formula>T_Mobile_Site_ID__r.Structure_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Type</label>
    <type>Text</type>
</CustomField>