force-app/main/default/objects/Site_Walk_Form__c/fields/Site_Walk_Requested__c.field-meta.xml
<CustomField>
    <fullName>Site_Walk_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Walk Requested</label>
    <type>Checkbox</type>
</CustomField>