force-app/main/default/objects/Site_Walk_Form__c/fields/Site_Walk_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Walk_Status__c</fullName>
    <label>Site Walk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Walk Requested</fullName>
                <default>true</default>
                <label>Site Walk Requested</label>
            </value>
            <value>
                <fullName>Deconstruction Team Scheduling</fullName>
            </value>
            <value>
                <fullName>Site Walk Scheduled</fullName>
            </value>
            <value>
                <fullName>Site Walk Completed</fullName>
            </value>
            <value>
                <fullName>Site Walk  Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>