force-app/main/default/objects/Site_Walk_Form__c/fields/T_Mobile_Contact__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Contact__c</fullName>
    <label>T-Mobile Contact</label>
    <length>55</length>
    <type>Text</type>
</CustomField>