force-app/main/default/objects/Site_Walk_Form__c/fields/T_Mobile_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Site_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divestiture Site ID</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Site Walk Forms</relationshipLabel>
    <relationshipName>Site_Walk_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>