force-app/main/default/objects/Site_Walk_Form__c/fields/Third_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Third_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Attempt</label>
    <type>Checkbox</type>
</CustomField>