force-app/main/default/objects/Site_Walk_Form__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pacific Standard Time - PST (GMT-8)</fullName>
            </value>
            <value>
                <fullName>Pacific Daylight Time - PDT (GMT-7)</fullName>
            </value>
            <value>
                <fullName>Mountain Standard Time - MST (GMT-7)</fullName>
            </value>
            <value>
                <fullName>Mountain Daylight Time - MDT (GMT-6)</fullName>
            </value>
            <value>
                <fullName>Central Standard Time - CST (GMT-6)</fullName>
            </value>
            <value>
                <fullName>Central Daylight Time - CDT (GMT-5)</fullName>
            </value>
            <value>
                <fullName>Eastern Standard Time - EST (GMT-5)</fullName>
            </value>
            <value>
                <fullName>Eastern Daylight Time - EDT (GMT-4)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>