force-app/main/default/objects/Site_Walk_Form__c/fields/Total_of_DISH_people_expected_to_atten__c.field-meta.xml
<CustomField>
    <fullName>Total_of_DISH_people_expected_to_atten__c</fullName>
    <label>Total #No DISH people expected to attend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>