force-app/main/default/objects/Site_Walk_Form__c/validationRules/Attempt_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Attempt_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
	And(First_Attempt__c = False,Second__c = true),
	And(Third_Attempt__c = True,OR(Second__c = false,First_Attempt__c = False)))</errorConditionFormula>
    <errorMessage>Previous Attempts is required</errorMessage>
</ValidationRule>