force-app/main/default/objects/Site_Walk_Form__c/validationRules/Dish_Comments_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Dish_Comments_required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(OR(
AND(Priorvalue(Second__c)=false,ISCHANGED(Second__c)),
AND(Priorvalue(Third_Attempt__c)=false,ISCHANGED(Third_Attempt__c))),NOT(ischanged( Enter_Long_Comment_here__c ))))</errorConditionFormula>
    <errorMessage>Comments is Required for each Attempt</errorMessage>
</ValidationRule>