force-app/main/default/objects/Site_Walk_Form__c/validationRules/Document_Attachment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Document_Attachment_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Site_Walk_Status__c , &apos;Site Walk Completed&apos;),
				Document_Attached__c= False )</errorConditionFormula>
    <errorDisplayField>Document_Attached__c</errorDisplayField>
    <errorMessage>Please upload the Document before site walk close and check the &quot;Document Attached&quot; field.
If you already attached the Document, Please Check the &quot;Document Attached&quot; field.</errorMessage>
</ValidationRule>