force-app/main/default/objects/Site_Walk_Form__c/validationRules/Time_Zone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Zone_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Time__c)),ISPICKVAL(Time_Zone__c,&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Time_Zone__c</errorDisplayField>
    <errorMessage>Time Zone is Required when you entered Time</errorMessage>
</ValidationRule>